--- a/render.yaml
+++ b/render.yaml
@@ -3,21 +3,19 @@ services:
     name: fastapi_social_media_api
     env: python
     plan: free
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
-    
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: ENVIRONMENT
         value: production
       - key: DATABASE_URL
         fromDatabase:
-          name: postgres
+          name: postgres_db       # ← Nome servizio
           property: connectionString
-    
     autoDeploy: true
 
 databases:
-  - name: postgres
-    databaseName: social_api_db
-    user: postgres
+  - name: postgres_db           # ← Nome servizio (stesso sopra)
+    databaseName: social_db     # ← Nome interno DB
+    user: social_user           # ← Username VALIDO!
     plan: free
