--- a/.github/workflows/buld-deply.yml
+++ b/.github/workflows/buld-deply.yml
@@ -3,10 +3,18 @@ name: Build and Deply Code
 on: [push, pull_request]
 
 jobs:
-  jon1:
+  job1:
     runs-on: ubuntu-latest
     steps:
       - name: pulling git repo
         uses: actions/checkout@v6
       - name: say hy
         run: echo "hello modou"
+      - name: install python version 3.14.0
+        uses: actions/setup-python@v6 
+        with:
+          python-version: "3.14"
+      - name: update pip
+        run: python -m pip install --upgrade pip
+      - name: install dependencies
+        run: pip install -r requirements.txt
