--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -5,6 +5,8 @@ on: [push, pull_request]
 jobs:
   job1:
     runs-on: ubuntu-latest
+    environment:
+      name: main - fastapi_social_media_api
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
       ACCESS_TOKEN_EXPIRE_MINUTES: ${{ secrets.ACCESS_TOKEN_EXPIRE_MINUTES }}
@@ -12,7 +14,7 @@ jobs:
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
       POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
       POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
-      POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+
 
     steps:
       - name: pulling git repo
@@ -30,4 +32,4 @@ jobs:
       - name: test with pytest
         run: |
           pip install pytest
-          pytest
+          pytest tests/
