--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -32,4 +32,4 @@ jobs:
       - name: test with pytest
         run: |
           pip install pytest
-          pytest tests/
+          pytest test/
