--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -45,3 +45,26 @@ jobs:
         run: |
           pip install pytest
           pytest test/
+      - name: login to dockerhub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN}}
+      - name: set up docker buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
+      - name: build and push docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./
+          file: ./Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi_social_media_api:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,src=/tmp/.buildx-cache
+      - name: image digest
+        run: echo ${{ steps.buildx.outputs.digest }}
+        
+
+
