--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -3,7 +3,7 @@ name: Build and Deploy Code
 on: [push, pull_request]
 
 jobs:
-  job1:
+  build:
     runs-on: ubuntu-latest
     environment:
       name: main - fastapi_social_media_api
@@ -45,32 +45,42 @@ jobs:
         run: |
           pip install pytest
           pytest test/
-      - name: login to dockerhub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN}}
-      - name: set up docker buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v2
-      - name: build and push docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./
-          file: ./Dockerfile
-          builder: ${{steps.buildx.outputs.name}}
-          push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi_social_media_api:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+      # - name: login to dockerhub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ secrets.DOCKER_HUB_USERNAME }}
+      #     password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN}}
+      # - name: set up docker buildx
+      #   id: buildx
+      #   uses: docker/setup-buildx-action@v2
+      # - name: build and push docker image
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     context: ./
+      #     file: ./Dockerfile
+      #     builder: ${{steps.buildx.outputs.name}}
+      #     push: true
+      #     tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi_social_media_api:latest
+      #     cache-from: type=local,src=/tmp/.buildx-cache
+      #     cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
-      - name: Move cache  # NEW: Rotate for next run
-        if: always()
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-      - name: image digest
-        run: echo ${{ steps.buildx.outputs.digest }}
+      # - name: Move cache  # NEW: Rotate for next run
+      #   if: always()
+      #   run: |
+      #     rm -rf /tmp/.buildx-cache
+      #     mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+      # - name: image digest
+      #   run: echo ${{ steps.buildx.outputs.digest }}
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: main - fastapi_social_media_api
+    steps:
+      - name: say hi
+        run: echo "hello modou"
         
+
 
 
